fix(web): prevented overflows #2

--- a/client/projects/shared/blocks/blocks/flag-list/flag-list.component.scss
+++ b/client/projects/shared/blocks/blocks/flag-list/flag-list.component.scss
@@ -2,6 +2,7 @@
 	position: relative;
 	background: var(--c-dark);
 	padding: 8rem 0;
+	overflow: hidden;
 }
 .fl-background {
 	position: absolute;
