--- a/client/projects/shared/blocks/blocks/marquee/marquee.component.scss
+++ b/client/projects/shared/blocks/blocks/marquee/marquee.component.scss
@@ -7,6 +7,7 @@
 	font-family: var(--f-title);
 	line-height: 1.5;
 	white-space: nowrap;
+	overflow: hidden;
 }
 .m-image {
 	display: block;
